# scales

./: CMakeLists.txt  README.md
ScalesApp/: ScalesApp.cpp
ScalesLib/: Scale.cpp  Scale.h
ScalesUnitTest/: ScalesUnitTest.cpp
